tests/testthat/prod/fail/labels/1.png.R
structure(list(url = "labels/1.png", status_code = 500L, headers = structure(list(
    server = "nginx/1.22.1", date = "Wed, 08 Mar 2023 13:53:06 GMT",
    `content-type` = "image/png", `content-length` = "334", connection = "keep-alive",
    `last-modified` = "Sun, 05 Mar 2023 03:09:13 GMT", etag = "d9f0b968707600d91798ddae151d6bc8",
    `cache-control` = "max-age=315360000", expires = "Thu, 31 Dec 2037 23:55:55 GMT",
    `cache-control` = "public", `x-cache-status` = "HIT", `access-control-allow-origin` = "*",
    `access-control-allow-methods` = "POST, GET, OPTIONS", `access-control-allow-headers` = "x-requested-with, content-type, *"), class = c("insensitive",
"list")), all_headers = list(list(status = 200L, version = "HTTP/1.1",
    headers = structure(list(server = "nginx/1.22.1", date = "Wed, 08 Mar 2023 13:53:06 GMT",
        `content-type` = "image/png", `content-length` = "334",
        connection = "keep-alive", `last-modified` = "Sun, 05 Mar 2023 03:09:13 GMT",
        etag = "d9f0b968707600d91798ddae151d6bc8", `cache-control` = "max-age=315360000",
        expires = "Thu, 31 Dec 2037 23:55:55 GMT", `cache-control` = "public",
        `x-cache-status` = "HIT", `access-control-allow-origin` = "*",
        `access-control-allow-methods` = "POST, GET, OPTIONS",
        `access-control-allow-headers` = "x-requested-with, content-type, *"), class = c("insensitive",
    "list")))), cookies = structure(list(domain = logical(0),
    flag = logical(0), path = logical(0), secure = logical(0),
    expiration = structure(numeric(0), class = c("POSIXct", "POSIXt"
    )), name = logical(0), value = logical(0)), row.names = integer(0), class = "data.frame"),
    content = as.raw(c(0x4e, 0x41)), date = structure(1678283586, class = c("POSIXct",
    "POSIXt"), tzone = "GMT"), times = c(redirect = 0, namelookup = 8.8e-05,
    connect = 9e-05, pretransfer = 0.000203, starttransfer = 0.009443,
    total = 0.009476)), class = "response")
